<resources>
    <string name="app_name">EduRate</string>

    <!--Toolbar menus-->
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Fjalekalimi</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <!-- Sign in -->
    <string name="SIGN_UP">Hap Llogari</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_stats">Statistika</string>
    <string name="title_questionnaire_organization">Organizimi i pytësorit</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_generate">Generate</string>
    <string name="title_profile">Profile</string>
    <string name="question_one_rate">Nuk Pajtohem Aspak</string>
    <string name="question_two_rate">Nuk pajtohem</string>
    <string name="question_three_rate">Deri Diku</string>
    <string name="question_four_rate">Pajtohem</string>
    <string name="question_five_rate">Pajtohem Plotesisht</string>
    <string name="action_save">Ruaj</string>
    <string name="use_current_location">Perdor lokacionin e tanishem</string>
    <string name="login_as_ratee">Kyqu si profesor</string>
    <string name="login_as_rater">Vazhdo si student</string>
    <string name="professor_site_ratings">Vlerësimet</string>
    <string name="write_down_email_whose_pw_forgotten">Emaili juaj</string>
    <string name="you_will_receive_account_pw_reset">Pas pak do merrni një email përmes të cilit mund të ndryshoni fjalëkalimin tuaj!</string>
    <string name="pw_change_request_succ">Kërkesa u dërgua me sukses</string>
    <string name="pw_change_request_fail">Kërkesa dështoi!</string>
    <string name="send_pw_reset_email">Dërgo</string>
    <string name="login_login">Kyqu</string>
    <string name="login_the_login">Kyqja në llogari</string>
    <string name="reset_password">Rikthe fjalëkalimin</string>
    <string name="go_back_to_login">Kthehu tek Kyqja</string>
    <string name="user_name">Emri</string>
    <string name="user_last_name">Mbiemri</string>
    <string name="create_account">Krijo Llogari</string>
    <string name="confirm_password">Konfirmo Fjalekalimin</string>
    <string name="professor_title">Titulli</string>
    <string name="ratee_overall_ratings">Vlerësimet e Përgjithshme</string>
    <string name="scan_questionnaire_qr_code">Skano QR Kodin</string>
    <string name="please_fill_all_questions_before_submitting">Të gjitha pyetjet nga formulari duhet të kenë përgjigje!</string>
    <string name="menu_botom_nav_overall_ratings">Vlerësimet</string>
    <string name="menu_botom_nav_questionnaire">Pytësori</string>
    <string name="menu_botom_nav_stats">Statistika</string>
    <string name="menu_botom_nav_create">Krijo</string>
    <string name="restore_pw">Rikthe fjalëkalimin</string>
    <string name="model_qa_no_user_for_form">Formulari nuk i përket asnj pytësori!</string>
    <string name="model_qa_unk_user">Përdorues i panjohur ju lutemi rikyuni!</string>
    <string name="model_qa_please_fill_all_questions_before_submitting">Të gjitha pyetjet e formularit duhet të kenë përgjigje!</string>
    <string name="model_qo_qr_code_missing">Qr kodi i formularit jo valid!</string>
    <string name="model_qo_pick_date_from">Plotesoni orën prej!</string>
    <string name="model_qo_pick_date_to">Plotesoni orën deri!</string>
    <string name="model_qo_type_questionnaire_org_name">Plotësoni emrin e pytësorit!</string>
    <string name="model_qo_end_date_smaller_than_startdate">Ora prej nuk mund të jetë më e vonshme se ora deri!</string>
    <string name="model_qo_end_questionnaire_created_successfully">Formulari u krijua me sukses!</string>
    <string name="permission_camera_request">Për skanimin e QR kodit të pytsorit ,lejoni qasjen në kamerë!</string>
    <string name="permission_location_request">Për validim me lokacion, lejoni qasjen precize!</string>
    <string name="questionnaire_name">Emri i Pytsorit</string>
    <string name="questionnaire_far_from_spot">Jeni jasht perimetrit për vlerësim!</string>
    <string name="questionnaire_found">Pyetësori u gjet!</string>
    <string name="questionnaire_not_found">Pyetësori nuk u gjet!</string>
    <string name="scan_to_go">Skanoni QR code të pytësorit!</string>
    <string name="questionnaire_org_out_of_time">Pyetësorit i ka skaduar koha!</string>
    <string name="questionnaire_filled_before">Keni plotësuar më herët të njëjtin pytësor!</string>
    <string name="questionnaire_inserted_successfully">Pytësori u organizua!</string>
    <string name="questionnaire_inserted_UNsuccessfully">Organizimi i pytësorit dështoi!</string>

    <string name="questionnaire_share">Shpërndaj</string>
    <string name="action_close">Mbyll</string>
    <string name="menu_botom_nav_profile">Profili</string>
    <string name="log_out">Shkyqu</string>
</resources>
