<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_overall_ratee_stats">

    <fragment
        android:id="@+id/navigation_header_container"
        android:name="com.mindorks.framework.mvvm.ui.personal_ratings.PersonalRatingsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/personal_ratings" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mindorks.framework.mvvm.ui.questionnaire.HomeFragment"
        android:label="@string/menu_botom_nav_questionnaire"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mindorks.framework.mvvm.ui.questionnaire_creation.DashboardFragment"
        android:label="@string/title_questionnaire_organization"
        tools:layout="@layout/fragment_questionnaire_creation" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mindorks.framework.mvvm.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mindorks.framework.mvvm.ui.feed.blogs.BlogFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/navigation_overall_ratee_stats"
        android:name="com.mindorks.framework.mvvm.ui.overall_ratee_stats.OverallRateeStatsFragment"
        android:label="@string/ratee_overall_ratings"
        tools:layout="@layout/fragment_ratee_overall_ratings" />

    <fragment
        android:id="@+id/navigation_scan_form_fragment"
        android:name="com.mindorks.framework.mvvm.ui.questionnaire.scan_form.ScanFragment"
        android:label="@string/menu_botom_nav_questionnaire"
        tools:layout="@layout/fragment_scan_form_qr" >
        <action
            android:id="@+id/action_navigation_scan_form_fragment_to_navigation_home2"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>