<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:text="Profesori ka qene i rregullt ne kohe ne ligjerata ? "
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group_pick_answer"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/question_text"
            app:layout_constraintStart_toStartOf="@+id/question_text"
            app:layout_constraintTop_toBottomOf="@+id/question_text">

            <RadioButton
                android:id="@+id/question_answer_1"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:minHeight="48dp"
                android:text="@string/question_one_rate"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/question_text"
                app:layout_constraintStart_toStartOf="@+id/question_text"
                app:layout_constraintTop_toBottomOf="@+id/question_text" />

            <RadioButton
                android:id="@+id/question_answer_2"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/question_two_rate"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/question_answer_1"
                app:layout_constraintStart_toStartOf="@+id/question_answer_1"
                app:layout_constraintTop_toBottomOf="@+id/question_answer_1" />

            <RadioButton
                android:id="@+id/question_answer_3"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/question_three_rate"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/question_answer_2"
                app:layout_constraintStart_toStartOf="@+id/question_answer_2"
                app:layout_constraintTop_toBottomOf="@+id/question_answer_2" />

            <RadioButton
                android:id="@+id/question_answer_4"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/question_four_rate"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/question_answer_3"
                app:layout_constraintStart_toStartOf="@+id/question_answer_3"
                app:layout_constraintTop_toBottomOf="@+id/question_answer_3" />

            <RadioButton
                android:id="@+id/question_answer_5"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:text="@string/question_five_rate"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/question_answer_4"
                app:layout_constraintStart_toStartOf="@+id/question_answer_4"
                app:layout_constraintTop_toBottomOf="@+id/question_answer_4" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>