<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mindorks.framework.mvvm.ui.login.LoginActivity">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.mindorks.framework.mvvm.ui.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_design">

            <androidx.cardview.widget.CardView
                android:layout_width="378dp"
                android:layout_height="457dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="80dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">


                <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:text="@string/login_dummy"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:visibility="@{viewModel.isLoginUIMode ? View.VISIBLE : View.GONE}" />

                <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:text="@string/reset_password"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:visibility="@{viewModel.isLoginUIMode ? View.GONE: View.VISIBLE  }" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="288dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.isLoginUIMode ? View.VISIBLE : View.GONE}">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="40dp"
                        android:orientation="horizontal"

                        >

                        <Button
                            android:id="@+id/btnServerLoginRater"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            android:onClick="@{() -> viewModel.onServerLoginClick(false)}"
                            android:padding="10dp"
                            android:text="@string/login_as_rater"
                            android:textSize="16dp" />

                        <Button
                            android:id="@+id/btnServerLoginAsRatee"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            android:onClick="@{() -> viewModel.onServerLoginClick(true)}"
                            android:padding="10dp"
                            android:text="@string/login_as_ratee"
                            android:textSize="16dp" />


                    </LinearLayout>


                    <Button
                        android:id="@+id/button5"
                        style="@style/Button.Primary"
                        android:layout_width="111dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:onClick="goToCreateAccount"
                        android:text="@string/SIGN_UP" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="288dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.isLoginUIMode ? View.GONE: View.VISIBLE  }">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pw_reset_type_email"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:text="@={viewModel.emailToResetPasswordTo}"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/send_pw_reset_button"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"


                        android:onClick="sendResetPasswordEmail"
                        android:padding="10dp"
                        android:text="@string/send_pw_reset_email"
                        android:textSize="16dp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/ibGoogleLogin"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/transparent"
                        android:onClick="@{() -> viewModel.onGoogleLoginClick()}"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_google_plus" />

                    <ImageButton
                        android:id="@+id/ibFbLogin"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="24dp"
                        android:background="@color/transparent"
                        android:onClick="@{() -> viewModel.onFbLoginClick()}"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_facebook" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/go_back"
                    style="@style/Button.Primary"
                    android:onClick="@{()->viewModel.setLoginUIMode(true)}"
                    android:visibility="@{viewModel.isLoginUIMode ? View.GONE : View.VISIBLE}"
                    >
                </Button>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>
</layout>